# deepdive

./: .gitignore  CNNmnist.py  README  README.md  mnist.py  nn.py  pyproject.toml  pytest.ini  tensor.py  test.py  tests.py  usage.ipynb
deepdive/: __init__.py  dash.py  datautils.py  ddcli.py  nn.py  tensor.py  utils.py
